# zeusops-bot

./: .copier-answers.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml  release.Dockerfile
.github/workflows/: ghcr.yaml
docs/source/: architecture.md  conf.py  index.md
features/: reforger_current_mission.feature  reforger_list_missions.feature  reforger_set_mission.feature  reforger_upload.feature
src/zeusops_bot/: __init__.py  cli.py  command.py  discord.py  errors.py  logging.py  models.py  reforger_config_gen.py  settings.py
src/zeusops_bot/cogs/: __init__.py  zeus_upload.py
tests/: __init__.py  conftest.py  fixtures.py  test_current_mission.py  test_list_missions.py  test_set_mission.py  test_upload_mission.py  test_zeusops_bot.py
